--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Crime Tips</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/flexboxgrid.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   </head>
-  <body class="top-navigation">
+  <body>
     <div id="root"></div>
     <!--
       This HTML file is a template.
