--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Crime Tips</title>
+    <meta name=”description” content="Crime Tips 24/7 collects anonymous tips for law enforcement agencies, helping them solve important crimes.">
     <link href="css/flexboxgrid.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
