--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
     -->
     <title>Crime Tips</title>
     <meta name=”description” content="Crime Tips 24/7 collects anonymous tips for law enforcement agencies, helping them solve important crimes.">
-    <link href="css/flexboxgrid.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <!--<link href="css/flexboxgrid.min.css" rel="stylesheet">-->
+    <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>-->
+    <!--<link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">-->
   </head>
   <body>
     <div id="root"></div>
